restructured community service